<resources>
    <string name="app_name">AndroidLabProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">My TODO application</string>
    <string name="delete_all_tasks">Очистить</string>
    <string name="no_tasks_added">Создайте первую цель</string>
    <string name="save">Сохранить</string>
    <string name="editing_task">Редактирование задачи</string>
    <string name="description">Описание</string>
    <string name="title">Название</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
